# MemoryDog

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  dog  pyproject.toml
cli/: __init__.py  app.py  main.py
cli/ui/: chat.py  widgets.py
core/: agent_loop.py  bridge.py  config.py  db.py  instincts.py  memory.py  provider.py  ranking.py  retrieval.py  tools.py
docs/specs/: 2026-05-31-memorydog-mvp.md
docs/superpowers/plans/: 2026-06-01-phase-1-tui.md  2026-06-03-cross-encoder-reranking.md
migrations/: 001_init.sql
tests/: test_bridge.py  test_extraction.py  test_retrieval.py  test_tui.py
tests/benchmarks/: README.md  harness.py  tasks.py
vscode/: .vscodeignore  LICENSE  README.md  memorydog-0.1.0.vsix  package.json
vscode/src/: bridge.ts  extension.ts
vscode/src/webview/: chat.html  dog.html  instinct.html  memory.html
